correction app.js and css

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <div class="right">
         <div class="house">
-          <div id="house-blank circle"></div>
+          <div id="house-blank" class="circle"></div>
           <div id="house-paper" class="paper circle" >
             <img src="images/icon-paper.svg" alt="icon-paper">
           </div>
