revisi app.js, style.scss, index.html

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <div class="score">12</div>
     </div>
   </header>
-
-  <div class="choice-block">
+<div class="wrapper">
+    <div class="choice-block">
     <div data-attribute="paper" class="choice paper circle">
       <img src="images/icon-paper.svg" alt="icon-paper">
     </div>
@@ -96,6 +96,8 @@
   </div>
   
   <div class="rules">RULES</div>
+</div>
+
   
   <script src="app.js"></script>
   
